--- a/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvTable/uvTable.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/app-shared/unified-view/components/uvTable/uvTable.directive.html
@@ -6,7 +6,8 @@
   </tr>
   <tr ng-repeat="row in viewModel.rows track by $index">
     <td ng-repeat="value in row.values track by $index" ng-attr-id="{{viewModel.modelProp + '-row' + $parent.$index + '-col' + $index| uvDomIdFilter}}">
-      {{value}}
+      <span ng-show="value">{{value}}</span>
+      <span ng-show="!value">-</span>
     </td>
   </tr>
 </table>
