--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
@@ -72,6 +72,10 @@ $srs-glyphicon-hover-color: #808080;
   }
 }
 
+.srs-test {
+  left:907px !important
+}
+
 .sit-srs-medium {
   .panel-srs-info {
     .panel-body {
