--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form13.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form13.html
@@ -5,7 +5,8 @@
                           class="form-control otherInformation" auto-expand
                           ng-model="model.kommentar"
                           ng-change="viewState.limitOtherField('kommentar')"
-                          ng-blur="validate()"></textarea>
+                          ng-blur="validate()"
+                          wc-focus-on="focusOvrigt"></textarea>
 
         <div class="counter">Tecken kvar: {{teckenKvar()}}</div>
         <div class="info-transfer">
