INTYG-4423: namn och personnnummer ligger nu stilla när statustexten ändrar bredd.

--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_utkast-header.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_utkast-header.scss
@@ -109,6 +109,7 @@ $header-fix-panel-popover-color: #333;
   display: inline-block;
   margin-right: 20px;
   padding: 0;
+  min-width: 480px;
 }
 
 .header-fix-panel__title .popover {
