INTYG-4414: Långsam och ryckiga animering av utkastheader.
Har även åtgärdat hoppande header vid laddning av utkastet.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -488,6 +488,10 @@
       margin-top: 20px;
     }
   }
+  .header-fix-top .wc-spinner {
+    height: 90px;
+    padding: 4px;
+  }
   /* Used in patient-address-updater.formly.html */
   .wc-utkast-patient-address-updater {
 
