--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/utkast.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/utkast.html
@@ -39,7 +39,7 @@
         <form name="certForm" novalidate autocomplete="off" wc-auto-save="save(true)">
           <div ng-hide="viewState.common.error.activeErrorMessageKey">
 
-            <div wc-spinner label="info.loadingdata" show-spinner="!viewState.common.doneLoading"
+            <div wc-spinner label="info.loadingintyg" show-spinner="!viewState.common.doneLoading"
                  show-content="viewState.common.doneLoading">
 
               <div id="certificate" class="row certificate">
