--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEventsModal/latestEventsModal.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEventsModal/latestEventsModal.directive.scss
@@ -29,13 +29,17 @@
     padding: 0.9em;
   }
 
+  .modal-event-timestamp {
+    font-weight: bold;
+  }
+
   .modal-event-text {
     padding-left: 1em;
     padding-right: 2em;
   }
 
   .stripe-dark {
-    background-color: #ededed;
+    background-color: #D9E2E6;
   }
 
   .modal-dialog {
