--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -114,6 +114,7 @@
   @import 'gui/wcHelpChevron.directive.scss';
   @import 'gui/wcHelpChevronText.directive.scss';
   @import 'gui/wcIntegrationEnhetSelector/_wcIntegrationEnhetSelector.directive.scss';
+  @import 'gui/wcIntygPatientNamnPersonnummer.directive.scss';
   @import 'gui/wcIntygRelatedOtherIntygMessage.directive.scss';
   @import 'gui/wcIntygRelatedRevokedMessage.directive.scss';
   @import 'intyg/unified-view/uvPatientGrund/uvPatientGrund.scss';
