--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
@@ -6,7 +6,7 @@
        id="diagnoseForm">
 
       <wc-fmb-help-display related-form-id="FALT2" fmb-states="fmbViewState" field-name="DIAGNOS">
-      <wc-srs-help-display related-form-id="FALT2" fmb-states="fmbViewState" field-name="DIAGNOS" person-id="model.grundData.patient.personId" hsa-id="model.grundData.skapadAv.vardenhet.enhetsid">
+      <wc-srs-help-display person-id="model.grundData.patient.personId" hsa-id="model.grundData.skapadAv.vardenhet.enhetsid">
 
       <div class="row bottom-padding-medium">
         <div class='col-xs-12'>
