INTYG-4235: Lade till underrubrik Behörighet

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/about-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/about-partial.html
@@ -70,6 +70,8 @@
       </ul>
     </li>
   </ul>
+
+  <h4>Behörighet</h4>
   <p>
     Alla användare kan skapa, skriva och spara utkast. Endast läkare och tandläkare kan signera, ersätta och makulera
     intyg samt besvara frågor med ämnet "komplettering". Vårdadministratör kan notifiera läkare om att ett intyg är
