--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/about-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/about-partial.html
@@ -2,6 +2,10 @@
   Webcert är en tjänst som gör det möjligt att utfärda elektroniska läkarintyg och samla dem på ett ställe.
 </p>
 
+<p>
+  Nuvarande version är {{version}}
+</p>
+
 <h4>Användarkrav för Webcert</h4>
 
 <div wc-authority role="PRIVATLAKARE">
@@ -73,9 +77,28 @@
 
   <h4>Behörighet</h4>
   <p>
-    Alla användare kan skapa, skriva och spara utkast. Endast läkare och tandläkare kan signera, ersätta och makulera
-    intyg samt besvara frågor med ämnet "komplettering". Vårdadministratör kan notifiera läkare om att ett intyg är
-    klart för signering.
+    Alla användare kan skapa, skriva och spara utkast, förutsatt att patienten inte har en sekretessmarkering.
+    Vårdadministratörer kan notifiera läkare om att ett intyg är klart för signering.
+  </p>
+  <p>
+    Endast läkare och tandläkare kan skapa intyg för en patient med sekretessmarkering, signera intyg, ersätta och
+    makulera intyg samt besvara en kompletteringsfråga med ett nytt intyg.
+  </p>
+  <p>
+    Funktionen för att kommunicera frågor och svar och begäran om komplettering av intyg, som finns tillgänglig för
+    Försäkringskassans intyg, kan hanteras av såväl läkare som vårdadministratörer.
+  </p>
+</div>
+
+<div wc-authority role="PRIVATLAKARE">
+  <h4>Funktioner</h4>
+  <p>
+    I webcert kan du skapa och hantera intyg. Webcert stödjer utfärdande av vissa intygstyper för patienter med
+    sekretessmarkering.
+  </p>
+  <p>
+    För Försäkringskassans intyg finns en elektronisk funktion för frågor och svar samt hantering av
+    kompletteringsbegäran. Via funktionen kan läkaren och Försäkringskassan kommunicera om ett signerat intyg.
   </p>
 </div>
 
@@ -84,6 +107,7 @@
 <p>
   I samband med att intyget signeras görs det tillgängligt för invånaren i Mina intyg. I Mina intyg kan
   invånaren skicka intyget vidare elektroniskt till någon av de anslutna mottagarna, eller skriva ut det.
+  För sjukpenningintyget är det också möjligt att skapa en anpassad utskrift som kan ges till arbetsgivaren.
   Mina intyg nås via 1177 Vårdguidens e-tjänster <span dynamiclink key="1177"></span> eller via
   <span dynamiclink key="minaintyg"></span>.
 </p>
@@ -93,10 +117,6 @@
 </p>
 <p>
   Läkaren kan också skriva ut det signerade intyget från Webcert och ge till patienten.
-</p>
-<p>
-  För Försäkringskassans intyg finns en elektronisk funktion för frågor och svar. Via funktionen kan läkaren
-  och Försäkringskassan kommunicera om ett signerat intyg.
 </p>
 
 <h4>Webbläsare som stöds</h4>
