--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
@@ -33,7 +33,7 @@
           <div class="diagnos-row">
             <input type="text" class="form-control" id="diagnoseCode" name="diagnose.code" value=""
                    class='diagnose-code col-xs-11 form-control'
-                   ng-blur="updateFmbText(); validate()"
+                   ng-blur="updateFmbText(); srsService.updateDiagnosKod(model.diagnosKod); validate()"
                    ng-class="{'fielderror' : viewState.getValidationErrors('diagnoskod')}"
                    ng-model="model.diagnosKod"
                    ng-change="onChangeDiagnoseCode1()"
