INTYG-4181: diverse fixar

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
@@ -47,6 +47,12 @@ $srs-glyphicon-hover-color: #808080;
   cursor:pointer
 }
 
+.fixed-panel{
+  position:fixed !important;
+  top:40% !important;
+  left:950px !important;
+}
+
 .line{
   float:left;
   margin-left: 5px;
