INTYG-4181: påbörjat kryss-iconen

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
@@ -37,9 +37,9 @@ $srs-glyphicon-hover-color: #808080;
     color: white;
 }
 
-.close-button:hover + .close-button{
-  color:white;
-  background-color:black;
+.close-button{
+  color:white !important;
+  background-color:black !important;
 }
 
 .radio-inline{
