INTYG-4181: la till kryss för att stänga srs-rutan

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
@@ -55,6 +55,7 @@ $srs-glyphicon-hover-color: #808080;
 .button-rounded{
   border: 2px solid;
   border-radius: 27px !important;
+  background-color: #00777E;
 }
 
 .fixed-panel{
