--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -117,6 +117,7 @@
   @import 'gui/wcIntygPatientNamnPersonnummer.directive.scss';
   @import 'gui/wcIntygRelatedOtherIntygMessage.directive.scss';
   @import 'gui/wcIntygRelatedRevokedMessage.directive.scss';
+  @import 'gui/wcNewPersonIdMessage.scss';
   @import 'intyg/unified-view/uvPatientGrund/uvPatientGrund.scss';
   @import 'intyg/unified-view/uvSignedBy/uvSignedBy.scss';
   @import 'intyg/unified-view/uvWcFraga/uvWcFraga.directive.scss';
