INTYG-4490: Skyltar för namn och adress och css.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -118,6 +118,7 @@
   @import 'gui/wcIntygRelatedOtherIntygMessage.directive.scss';
   @import 'gui/wcIntygRelatedRevokedMessage.directive.scss';
   @import 'gui/wcNewPersonIdMessage.scss';
+  @import 'gui/wcPatientInfoChangeMessage.scss';
   @import 'intyg/unified-view/uvPatientGrund/uvPatientGrund.scss';
   @import 'intyg/unified-view/uvSignedBy/uvSignedBy.scss';
   @import 'intyg/unified-view/uvWcFraga/uvWcFraga.directive.scss';
