INTYG-4466: Hjälptexter använder nu max av sin parent i bredd. Header help har en container som contrainar max.

--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_utkast-header.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_utkast-header.scss
@@ -123,6 +123,10 @@ $header-fix-panel-popover-color: #333;
   font-weight: normal;
 }
 
+.header-help-container {
+  max-width: 500px;
+}
+
 .header-wrapper {
   /*  max-height: 110px; does commenting out this break anything? */
   overflow: hidden;
