INTYG-4556: ersatte inline styling med klasser

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
@@ -94,6 +94,14 @@ $srs-glyphicon-hover-color: #808080;
   outline:none;
 }
 
+.floatLeft {
+  float:left;
+}
+
+.floatRight {
+  float:right;
+}
+
 .line{
   float:left;
   margin-left: 5px;
