INTYG-4563: justerat fel och -infomeddelanden

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
@@ -63,6 +63,12 @@ $srs-glyphicon-hover-color: #808080;
   background-color:black !important;
 }
 
+.align-srs-close-button-right{
+  position:absolute;
+  top:-15px;
+  right:10px;
+}
+
 .radio-inline{
   position:relative;
   display:inline-block;
