--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
@@ -5,8 +5,9 @@
        field-has-errors="viewState.common.validation.messagesGrouped.diagnos"
        id="diagnoseForm">
 
-      <wc-srs-help-display person-id="model.grundData.patient.personId" hsa-id="model.grundData.skapadAv.vardenhet.enhetsid" intygs-typ="model.name">
-      <wc-fmb-help-display related-form-id="FALT2" fmb-states="fmbViewState" field-name="DIAGNOS">
+      <wc-srs-help-display person-id="model.grundData.patient.personId" hsa-id="model.grundData.skapadAv.vardenhet.enhetsid"
+                           intygs-typ="model.name"></wc-srs-help-display>
+    <wc-fmb-help-display related-form-id="FALT2" fmb-states="fmbViewState" field-name="DIAGNOS"></wc-fmb-help-display>
         
 
       <div class="row bottom-padding-medium">
