INTYG-4543: Fungerade ej, nytt försök

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
@@ -6,8 +6,8 @@
        id="diagnoseForm">
 
       <wc-srs-help-display person-id="model.grundData.patient.personId" hsa-id="model.grundData.skapadAv.vardenhet.enhetsid"
-                           intygs-typ="model.name"></wc-srs-help-display>
-    <wc-fmb-help-display related-form-id="FALT2" fmb-states="fmbViewState" field-name="DIAGNOS"></wc-fmb-help-display>
+                           intygs-typ="model.name">
+    <wc-fmb-help-display related-form-id="FALT2" fmb-states="fmbViewState" field-name="DIAGNOS">
         
 
       <div class="row bottom-padding-medium">
