--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
@@ -539,12 +539,29 @@ label {
         border: 2px solid $color_apple_blossom_approx;
     }
     .grouperror, .groupkomplettering {
-        margin: 0 -5px 0 -5px;
         padding: 8px;
         -webkit-border-radius: 4px 4px 4px 4px;
         -moz-border-radius: 4px 4px 4px 4px;
         border-radius: 4px 4px 4px 4px;
     }
+    .grouperror {
+        margin: 12px 14px 12px 14px;
+    }
+
+    .grouperror .wc-fraga {
+        padding: 12px 0 12px 0;
+    }
+
+    .wc-fraga .grouperror {
+        margin: 0;
+    }
+
+    .grouperror .wc-fraga.komplettering-active {
+        padding-right: 12px;
+        padding-left: 12px;
+        margin:-8px -8px 0 -8px;
+    }
+
 
     input.fieldkomplettering {
         box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 131, 145, 0.6);
