INTYG-4436: Start of new dodsorsak components.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -103,7 +103,8 @@
   @import 'fk/arenden/_arende.scss';
   @import 'fmb/_fmb.scss';
   @import 'gui/formly/diagnos.scss';
-  @import 'gui/formly/dodsorsak.scss';
+  @import 'gui/formly/dodsorsakMultirow.scss';
+  @import 'gui/formly/dodsorsakTerminalFoljd.scss';
   @import 'gui/formly/prognos.scss';
   @import 'gui/formly/sjukskrivningar.scss';
   @import 'gui/formly/underlag.scss';
