INTYG-4209: Tvingande consent dialog vid uppstart av WC om vårdpersonen är sekretessmarkerad, samt en infodialog i wc-header.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/_wc-header.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/_wc-header.scss
@@ -82,6 +82,7 @@ $url-avatar: url('/img/avatar.png');
       height: 34px;
     }
     &.headerbox-user-profile {
+      display: inline-block;
       padding-right: 44px;
       font-size: 13px;
       line-height: 18px;
