--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -121,6 +121,7 @@
   @import 'gui/wcIntygRelatedRevokedMessage.directive.scss';
   @import 'gui/wcNewPersonIdMessage.scss';
   @import 'gui/wcPatientInfoChangeMessage.scss';
+  @import 'gui/wcVardPersonSekretess/wcVardPersonSekretess.directive.scss';
   @import 'intyg/unified-view/uvPatientGrund/uvPatientGrund.scss';
   @import 'intyg/unified-view/uvSignedBy/uvSignedBy.scss';
   @import 'intyg/unified-view/uvWcFraga/uvWcFraga.directive.scss';
