INTYG-4671: ändrade styling för att bli mer enhetligt med webcert

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
@@ -40,6 +40,10 @@
  .take-all-space-you-can{
    width:100%;
  }
+
+ .srs-question{
+  display: inline;
+ }
  
  .prediction-box{
    border: 3px solid #000000 !important;
@@ -56,12 +60,12 @@
  }
  
  .nav-tabs > li.rounded > a  {
-   background-color: #00777E !important;
+   background-color: #28b4c4 !important;
    color: #ffffff !important;
  }
  
  .tab-inactive{
-   background-color: #00777E !important;
+   background-color: #28b4c4 !important;
    color: #ffffff !important;
  }
  
