INTYG-4371: Lagt ikonerna i anpassat flödet på samma höjd som rubriken för mobiler

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/customize-pdf/selectableFieldWrapper.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/customize-pdf/selectableFieldWrapper.directive.html
@@ -37,7 +37,11 @@
     <!-- summary compact mode version-->
     <div ng-if="summary && showContent()" class="row summary">
       <div class="col-xs-12 col-sm-4">
-        <h3><span dynamic-label key="{{labelKey}}"></span></h3>
+        <h3>
+          <i class="icon visible-xs"
+             ng-class="{'icon-ok included-icon': fc.selected, 'icon-cancel excluded-icon': !fc.selected}"></i>
+          <span dynamic-label key="{{labelKey}}"></span>
+        </h3>
         <h4 ng-if="subLabelKey"><span dynamic-label key="{{subLabelKey}}"></span></h4>
       </div>
 
@@ -49,7 +53,7 @@
       </div>
 
       <!-- summary right side decoration -->
-      <div class="col-xs-12 col-sm-1 text-right">
+      <div class="hidden-xs col-sm-1 text-right">
         <i class="icon"
            ng-class="{'icon-ok included-icon': fc.selected, 'icon-cancel excluded-icon': !fc.selected}"></i>
       </div>
