INTYG-4381: Ändrat bredd på columnerna

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/customize-pdf/miCheckboxSlider.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/customize-pdf/miCheckboxSlider.directive.scss
@@ -14,6 +14,10 @@ mi-checkbox-slider {
     cursor: pointer;
     padding-right: 10px;
 
+    @media (min-width: 768px) and (max-width: 1199px) {
+      padding-right: 0;
+    }
+
     &.switch-on {
       color: green;
     }
