INTYG-4446: Visar bara scrollbaren om den behövs

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEventsModal/latestEventsModal.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEventsModal/latestEventsModal.directive.scss
@@ -46,8 +46,7 @@
     display: table;
     max-width: 95vw;
     min-width: 300px;
-    overflow-x: auto;
-    overflow-y: scroll;
+    overflow: auto;
     position: relative;
     width: auto;
   }
