INTYG-4446: Ändrat om dialogen till uibModal

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -42,7 +42,7 @@
 @import 'components/customize-pdf/selectableCategoryWrapper.directive.scss';
 @import 'components/customize-pdf/selectableFieldWrapper.directive.scss';
 @import 'components/latestEvents/latestEvents.directive.scss';
-@import 'components/latestEventsModal/latestEventsModal.directive.scss';
+@import 'components/latestEventsModal/latestEventsModal.scss';
 @import 'components/miCertificateActionButtons/miCertificateActionButtons.directive.scss';
 @import 'components/miCompactCertificateBody/miCompactCertificateBody.directive.scss';
 @import 'components/miCompactCertificateHeader/miCompactCertificateHeader.directive.scss';
