INTYG-4670: lite fix

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/_srs.scss
@@ -96,7 +96,7 @@
    background-color: #00777E;
  }
  
- .fixed-panel{
+ .srs-fixed-panel{
    position:fixed !important;
    top:25% !important;
    left:50% !important;
