--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEventsModal/latestEventsModal.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEventsModal/latestEventsModal.html
@@ -2,7 +2,7 @@
   <button type="button" class="close" ng-click="close()">×</button>
   <h3 class="modal-title" tabindex="-1">
     <span message key="listtable.headers.latestEvent"></span>
-    <span class="nrofstatusesshown" message params="[statuses.length, statuses.length]" key="certificates.status.statusesshown"></span>
+    <span class="nrofstatusesshown" message params="[statuses.length, statuses.length]" key="certificates.events.evntsshown"></span>
   </h3>
 </div>
 
