--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
@@ -44,7 +44,7 @@
 
     </div>
     <div class="col-xs-12 col-sm-5">
-      <latest-events cert-id="{{cert.id}}" statuses="certMeta.statuses"></latest-events>
+      <latest-events cert-id="{{cert.id}}" events="certMeta.events"></latest-events>
     </div>
   </div>
 </mi-page-head>
@@ -53,9 +53,10 @@
 
     <!-- Loading spinner: visibility defined by $scope.doneLoading  -->
     <div mi-spinner label="modules.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
-
+      <mi-certificate-replaced cert-meta-model="certMeta"></mi-certificate-replaced>
       <mi-certificate-action-buttons cert-model="cert" on-send="send(cert)" enable-archive="true"
-                                     enable-print="true"></mi-certificate-action-buttons>
+                                     enable-print="true"
+                                     is-replaced="certMeta.replacedBy"></mi-certificate-action-buttons>
 
       <mi-compact-certificate-header cert-meta-model="certMeta"></mi-compact-certificate-header>
       <mi-compact-certificate-body cert-meta-model="certMeta"></mi-compact-certificate-body>
