--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEvents/latestEvents.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEvents/latestEvents.directive.html
@@ -1,23 +1,23 @@
 <div class="latest-events">
   <div class="tag" ng-if="!hideHeader" >
     <span class="lastevent-header" message key="listtable.headers.latestEvent"></span>
-    <span ng-if="!maxStatuses" id="statusesshown">{{statusesShown(filteredStatuses, isCollapsedArchive)}}</span>
-    <button ng-if="!maxStatuses" id="showEventsBtn-{{certId}}" type="button" class="btn-link btn-link-link pull-right"
-            href="#status" ng-show="filteredStatuses.length > 2"
+    <span ng-if="!maxEvents" id="eventsshown">{{eventsShown(filteredEvents, isCollapsedArchive)}}</span>
+    <button ng-if="!maxEvents" id="showEventsBtn-{{certId}}" type="button" class="btn-link btn-link-link pull-right"
+            href="#event" ng-show="filteredEvents.length > 2"
             ng-click="expandClicked()">
-      <i class="icon icon-up-open rotate-180"></i> <span message key="label.status.{{ !isCollapsedArchive }}"></span>
+      <i class="icon icon-up-open rotate-180"></i> <span message key="label.event.{{ !isCollapsedArchive }}"></span>
     </button>
     <div style="clear:both"></div>
   </div>
-  <div ng-if="filteredStatuses.length > 0" ng-attr-id="event-{{certId}}">
-    <div ng-repeat="status in filteredStatuses track by $index" ng-if="$index < maxStatusRows(isCollapsedArchive)"
-         ng-init="info = getEventInfo(status)" ng-attr-id="event-{{certId}}-{{$index}}"
-         ng-class="{'event-row-tight': maxStatuses, 'event-row': !maxStatuses, 'stripe-dark': !maxStatuses && $even}" >
+  <div ng-if="filteredEvents.length > 0" ng-attr-id="event-{{certId}}">
+    <div ng-repeat="event in filteredEvents track by $index" ng-if="$index < maxEventRows(isCollapsedArchive)"
+         ng-init="info = getEventInfo(event)" ng-attr-id="event-{{certId}}-{{$index}}"
+         ng-class="{'event-row-tight': maxEvents, 'event-row': !maxEvents, 'stripe-dark': !maxEvents && $even}" >
       <span ng-attr-id="event-timestamp-{{certId}}-{{$index}}" class="latest-events-timestamp">{{info.timestamp}}</span>
-      <span class="event-text" ng-attr-id="event-text-{{certId}}-{{$index}}">{{info.text}}</span>
+      <span class="event-text" ng-attr-id="event-text-{{certId}}-{{$index}}" ng-bind-html="info.text"></span>
     </div>
   </div>
-  <div ng-if="filteredStatuses.length == 0" data-ng-attr-class="certificate-noevents-{{certId}}">
-    <div ng-attr-id="event-{{certId}}">{{messageService.getProperty('certificates.status.noevents')}}</div>
+  <div ng-if="filteredEvents.length == 0" data-ng-attr-class="certificate-noevents-{{certId}}">
+    <div ng-attr-id="event-{{certId}}">{{messageService.getProperty('certificates.events.noevents')}}</div>
   </div>
 </div>
