--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateBody/miCompactCertificateBody.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateBody/miCompactCertificateBody.directive.html
@@ -8,7 +8,7 @@
 
   <div class="row">
     <div class="col-xs-12 col-sm-6 body-col">
-      <latest-events cert-id="{{certMetaModel.id}}" statuses="certMetaModel.statuses" max-statuses="2"
+      <latest-events cert-id="{{certMetaModel.id}}" events="certMetaModel.events" max-events="2"
                      class="compact-body-latest-events"></latest-events>
     </div>
 
