--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateHeader/miCompactCertificateHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateHeader/miCompactCertificateHeader.directive.html
@@ -9,9 +9,16 @@
         </div>
         <div>
           <div class="complementary-info">
-            <span message key="{{certMetaModel.type | lowercase}}.compact-header.complementaryinfo-prefix"></span>
-            <span
-                ng-attr-id="certificate-complementary-info-{{certMetaModel.id}}">{{certMetaModel.complementaryInfo}}</span>
+            <span ng-if="!certMetaModel.replacedBy">
+                 <span message key="{{certMetaModel.type | lowercase}}.compact-header.complementaryinfo-prefix"></span>
+              <span ng-attr-id="certificate-complementary-info-{{certMetaModel.id}}">
+                {{certMetaModel.complementaryInfo}}
+              </span>
+            </span>
+
+            <span ng-if="certMetaModel.replacedBy" ng-attr-id="certificate-complementary-info-{{certMetaModel.id}}">
+              <span message key="certificates.label.replaced"></span>
+            </span>
           </div>
 
           <div class="certificate-issued-date">
