INTYG-3618: Lagade fel i events-modalen

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCertificateReplaced/miCertificateReplaced.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCertificateReplaced/miCertificateReplaced.directive.html
@@ -1,4 +1,4 @@
-<div class="alert alert-warning" ng-if="certMetaModel.replacedBy">
+<div id="mi-certificate-replaced-warn" class="alert alert-warning" ng-if="certMetaModel.replacedBy">
   <strong>Intyget är ersatt</strong>
   <p><span message key="certificates.events.ersatt" params="[certMetaModel.replacedBy.fromIntygsId, certMetaModel.type]"></span>
   </p>
