--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEvents/latestEvents.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEvents/latestEvents.directive.html
@@ -1,6 +1,6 @@
 <div class="latest-events">
   <div class="tag" ng-if="!hideHeader" >
-    <span class="lastevent-header" message key="listtable.headers.latestEvent"></span>
+    <span class="lastevent-header" message key="listtable.headers.latestevent"></span>
     <span ng-if="!maxEvents" id="eventsshown">{{eventsShown(filteredEvents, isCollapsedArchive)}}</span>
     <button ng-if="!maxEvents" id="showEventsBtn-{{certId}}" type="button" class="btn-link btn-link-link pull-right"
             href="#event" ng-show="filteredEvents.length > 2"
