--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEventsModal/latestEventsModal.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEventsModal/latestEventsModal.html
@@ -2,18 +2,18 @@
   <button type="button" class="close" ng-click="close()">×</button>
   <h3 class="modal-title" tabindex="-1">
     <span message key="listtable.headers.latestEvent"></span>
-    <span class="nrofstatusesshown" message params="[statuses.length, statuses.length]" key="certificates.events.evntsshown"></span>
+    <span class="nrofstatusesshown" message params="[events.length, events.length]" key="certificates.events.eventsshown"></span>
   </h3>
 </div>
 
 <div class="modal-body">
   <div class="modal-event-rows">
     <div class="modal-event-row"
-         ng-repeat="status in filteredStatuses track by $index"
-         ng-init="info = getEventInfo(status)"
+         ng-repeat="event in filteredEvents track by $index"
+         ng-init="info = getEventInfo(event)"
          ng-attr-id="event-{{certId}}-{{$index}}" ng-class-odd="'stripe-dark'">
       <span class="modal-event-timestamp" ng-attr-id="event-timestamp-{{certId}}-{{$index}}2">{{info.timestamp}}</span>
-      <span class="modal-event-text" ng-attr-id="event-text-{{certId}}-{{$index}}2">{{info.text}}</span>
+      <span class="modal-event-text" ng-attr-id="event-text-{{certId}}-{{$index}}2" ng-bind-html="info.text"></span>
     </div>
   </div>
 </div>
