--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -43,6 +43,7 @@
 @import 'components/customize-pdf/selectableFieldWrapper.directive.scss';
 @import 'components/latestEvents/latestEvents.directive.scss';
 @import 'components/latestEventsModal/latestEventsModal.scss';
+@import 'components/latestEventsRow/latestEventsText.directive.scss';
 @import 'components/miCertificateActionButtons/miCertificateActionButtons.directive.scss';
 @import 'components/miCompactCertificateBody/miCompactCertificateBody.directive.scss';
 @import 'components/miCompactCertificateHeader/miCompactCertificateHeader.directive.scss';
