--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEventsModal/latestEventsModal.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEventsModal/latestEventsModal.html
@@ -2,7 +2,7 @@
   <button type="button" class="close" ng-click="close()">×</button>
   <h3 class="modal-title" tabindex="-1">
     <span message key="listtable.headers.latestEvent"></span>
-    <span class="nrofstatusesshown" message params="[events.length, events.length]" key="certificates.events.eventsshown"></span>
+    <span class="nrofstatusesshown" message params="[filteredEvents.length, filteredEvents.length]" key="certificates.events.eventsshown"></span>
   </h3>
 </div>
 
@@ -11,9 +11,9 @@
     <div class="modal-event-row"
          ng-repeat="event in filteredEvents track by $index"
          ng-init="info = getEventInfo(event)"
-         ng-attr-id="event-{{certId}}-{{$index}}" ng-class-odd="'stripe-dark'">
-      <span class="modal-event-timestamp" ng-attr-id="event-timestamp-{{certId}}-{{$index}}2">{{info.timestamp}}</span>
-      <span class="modal-event-text" ng-attr-id="event-text-{{certId}}-{{$index}}2" ng-bind-html="info.text"></span>
+         ng-attr-id="event-{{::certId}}-{{::$index}}" ng-class-odd="'stripe-dark'">
+      <span class="modal-event-timestamp" ng-attr-id="event-timestamp-{{::certId}}-{{::$index}}2">{{::info.timestamp}}</span>
+      <latest-events-text class="modal-event-text" ng-attr-id="event-text-{{::certId}}-{{::$index}}2" text="info.text" view-cert="viewCert(type, id)"></latest-events-text>
     </div>
   </div>
 </div>
