INTYG-3618: Mindre uppdateringar / buggfix för visning av händelser

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEvents/latestEvents.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/latestEvents/latestEvents.directive.html
@@ -5,7 +5,7 @@
     <button ng-if="!maxEvents" id="showEventsBtn-{{certId}}" type="button" class="btn-link btn-link-link pull-right"
             href="#event" ng-show="filteredEvents.length > 2"
             ng-click="expandClicked()">
-      <i class="icon icon-up-open rotate-180"></i> <span message key="label.status.{{ !isCollapsedArchive }}"></span>
+      <i class="icon icon-up-open rotate-180"></i> <span message key="label.event.{{ !isCollapsedArchive }}"></span>
     </button>
     <div style="clear:both"></div>
   </div>
