--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCertificateReplaced/miCertificateReplaced.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCertificateReplaced/miCertificateReplaced.directive.html
@@ -1,9 +1,5 @@
 <div id="mi-certificate-replaced-warn" class="alert alert-warning" ng-if="certMetaModel.replacedBy">
-  <strong>Intyget är ersatt</strong>
-  <p><span message key="certificates.events.ersatt" params="[certMetaModel.replacedBy.fromIntygsId, certMetaModel.type]"></span>
-  </p>
-  <br>Detta kan till exempel ske om intyget innehåller felaktig information, ny information tillkommit eller att
-  försäkringskassan begärt en komplettering och vården svarat med ett nytt intyg med de kompletterande uppgifterna.
-  <br><br>Läs mer om ersatta intyg under <a href="/web/start#/omminaintyg/faq">Om Mina Intyg</a>.
+  <strong><span message key="certificates.events.ersatt.warn" params="[certMetaModel.replacedBy.fromIntygsId, certMetaModel.type]"></span>
+  </strong>
+  <br>Vårdgivaren kan ersätta ett intyg om till exempel intyget innehåller felaktig information, ny information tillkommit eller om Försäkringskassan begärt en komplettering och vården svarat med ett nytt intyg med de kompletterande uppgifterna.
 </div>
-
